<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userContent"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="18dp"
    android:elevation="10dp"
    android:padding="5dp"
    app:cardBackgroundColor="#FF03DAC5"
    app:cardCornerRadius="15dp"


    app:cardElevation="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgprofile_image"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="-5dp"
        android:src="@drawable/profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/name_of_the_user"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:text="@string/email_of_the_user"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="3dp"
            android:text="@string/status_of_the_user"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAddFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:background="#FF000000"
            android:minHeight="48dp"
            android:text="@string/add_friend"
            android:textAlignment="center"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />


    </LinearLayout>


</androidx.cardview.widget.CardView>