<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="#FFFFFF"
    tools:context=".SignUp">

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_email"
            android:textColorHint="#FF000000"
            app:endIconTint="#FF000000"
            app:endIconMode="clear_text"
            app:startIconTint="#FF000000"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="#FF000000"
                tools:ignore="DuplicateClickableBoundsCheck" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Sign_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_Password"
                android:layout_below="@+id/Sign_up_email"
                android:textColorHint="#FF000000"
                android:layout_marginTop="10dp"
                app:endIconTint="#FF000000"
                app:endIconMode="clear_text"
                app:startIconTint="#FF000000"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etsignuppassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="#FF000000"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Sign_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/confirm_your_Password"
                android:layout_below="@+id/Sign_password"
                android:textColorHint="#FF000000"
                android:layout_marginTop="10dp"
                app:endIconTint="#FF000000"
                app:endIconMode="clear_text"
                app:startIconTint="#FF000000"
            >
              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/etsignupconfirmpassword"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:inputType="textPassword"
                  android:textColor="#FF000000"
                  />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Sign_confirm_password"
                android:layout_marginTop="10dp"
                android:background="#FF6200EE"
                android:textColor="#FFFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/SignUp"
                tools:ignore="SpeakableTextPresentCheck" />


        </RelativeLayout>
    </LinearLayout>

 </ScrollView>