<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="#FFFFFF"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_email"
                android:textColorHint="#FF000000"
                app:endIconTint="#FF000000"
                app:endIconMode="clear_text"
                app:startIconTint="#FF000000"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="#FF000000"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_Password"
                android:textColorHint="#FF000000"
                android:layout_below="@id/login_email"
                android:layout_marginTop="10dp"
                app:endIconTint="#FF000000"
                app:endIconMode="clear_text"
                app:startIconTint="#FF000000"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#FF000000"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_Password"
                android:layout_marginTop="10dp"
                android:background="#FF6200EE"
                android:text="@string/login"
                android:textColor="#FFFFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btgoogleLogin"
                android:layout_width="500dp"
                android:layout_height="100dp"
                android:layout_below="@+id/btlogin"
                android:layout_marginTop="10dp"
                android:background="#FFFFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/google"
                tools:ignore="SpeakableTextPresentCheck" />


        </RelativeLayout>




    </LinearLayout>

</ScrollView>